add google plus profile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="Linghua Zhang" />
+    <meta name="author" content="吕小荣" />
+    <link rel="author" href="https://plus.google.com/110337685999489811708/posts"/>
     {% if page.title %}
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} - 吕小荣</title>
     {% else %}
     <title>{{ site.name }}</title>
     {% endif %}
