--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="吕小荣" />
-    <link rel="author" href="https://plus.google.com/110337685999489811708/posts"/>
+    <meta property="og:type" content="blog"/>
     {% if page.title %}
-    <title>{{ page.title }} - 吕小荣</title>
+    <title>{{ page.title }} - {{ site.name }}</title>
+    <meta name="author" content="Ryan Lee" />
+    <link rel="author" href="https://plus.google.com/110337685999489811708/posts"/>
+    <meta property="og:title" content= {{ page.title }} />
+    <meta property="og:site_name" content="Ryan's Blog"/>
+    <meta property="og:image" content="http://www.gravatar.com/avatar/28936031e91c554c5255d939bd80350a"/>
     {% else %}
     <title>{{ site.name }}</title>
     {% endif %}
