--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <div id="main" role="main">
         <header>
           <div id="header">
-            <h1><a title="{{ site.name }}" class="" href="/">{{ site.name }}</a></h1>
+            <h1><a title="{{ site.name }}" class="" href="/archive.html">{{ site.name }}</a></h1>
           </div>
           <nav>
             <span><a title="Archive" class="icon-list-ul" href="/archive.html"></a></span>
