--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         </div>
         <footer>
           <div>
-             <a href="https://github.com/xiaoronglv" title="fork me">fork me on Github</a>
+             <a href="https://github.com/xiaoronglv/xiaoronglv.github.io" title="fork me">fork me on Github</a>
           </div>
         </footer>
       </div> <!-- main -->
