--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
             <span><a title="About" class="icon-user" href="/about.html"></a></span>
             <!-- <span><a title="Gallery" class="icon-film" href="http://foto.lhzhang.com"></a></span> -->
             <span><a title="Blogroll" class="icon-link" href="/links.html"></a></span>
-            <span><a title="Subscribe" class="icon-rss" href="/atom.xml"></a></span>
+            <span><a title="Subscribe" class="icon-rss" href="/rss"></a></span>
           </nav>
         </header>
         <div id="content">
