--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta property="og:type" content="blog"/>
     {% if page.title %}
     <title>{{ page.title }} - {{ site.name }}</title>
-    <meta name="author" content="Ryan Lee" />
+    <meta name="author" content="Ryan Lü" />
     <link rel="author" href="https://plus.google.com/110337685999489811708/posts"/>
-    <meta property="og:title" content= {{ page.title }} />
-    <meta property="og:site_name" content="Ryan's Blog"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content= "{{ page.title }}" />
+    <meta property="og:author" content= "https://www.facebook.com/xiaoronglv" />
+    <meta property="og:url" content= "http://mednoter.com{{ page.url }}" />
+    <meta property="og:site_name" content= "Ryan's Blog" />
+    <meta property="og:article:published_time" content= "{{ page.date | date:"%Y-%m-%d" }}" />
     <meta property="og:image" content="http://www.gravatar.com/avatar/28936031e91c554c5255d939bd80350a"/>
     {% else %}
     <title>{{ site.name }}</title>
