--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<article>
+<article >
+  <div itemscope itemtype ="http://schema.org/Article">
   <section class="title">
     <h2>{{ page.title }} </h2>
   </section>
   <section class="meta">
   <span class="time">
-    <time datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date:"%Y-%m-%d" }}</time>
+    <time itemprop="datePublished" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date:"%Y-%m-%d" }}</time>
   </span>
   {% if page.tags %}
   <span class="tags">
@@ -39,6 +40,7 @@ layout: default
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </section>
   {% endif %}
+  </div>
 </article>
 
 {% if page.previous or page.next %}
