--- a/media/css/style.css
+++ b/media/css/style.css
@@ -249,4 +249,25 @@ li[id*='dsq-like-'] {
   font-size: 13px;
   line-height: 1.6; }
 
+table {
+  max-width: 100%;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+table, tr, td  {
+  padding: 8px;
+  line-height: 20px;
+  text-align: left;
+  vertical-align: top;
+  border-bottom: 1px solid #dddddd;
+}
+
+table, th, td  {
+  padding: 8px;
+  line-height: 20px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #dddddd;
+}
