--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header>
-<a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59"></a>
+<a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59">
 <p>{{ site.title }}</p>
+</a>
 </header>
