--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -360,3 +360,11 @@ img {
   margin-left: -340px; }
 .paging .right {
   margin-left: 320px; }
+
+table {
+    border-collapse: collapse;
+}
+
+table, td, th {
+    border: 1px solid #d0dfda;
+}
