--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,6 +1,8 @@
 <br />
+<p><img src="/images/scribble.png" alt="Avatar" width="53" height="59"></p>
 <p>
   Til next time,<br/>
   {{ site.signoff }}
   <span class="muted">{{ page.date | date: "at %H:%M" }}</span>
 </p>
+
