--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,9 @@
             <div class='date'>{{ page.date | date_to_string }}</div>
             {{ page.title }}
           </h1>
+          <div style="display:none" >
+            <img src="http://7d9j7p.com1.z0.glb.clouddn.com/scribble-min.jpg">
+          </div>
           {{ content }}
           {% include signoff.html %}
         </section>
