--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,7 +1,8 @@
 <br />
 <p>
-  Til next time,<br/>
   {{ site.signoff }}
-  <span class="muted">{{ page.date | date: "at %H:%M" }}</span>
+  <span class="muted">{{ page.date | date: "at %H:%M" }}</span><br/>
+  <br/>
+  若您对本文有勘误、建议或补充，可以发邮件给我。<br/>
+  <img src="/media/files/misc/contact_me.png" alt="not found" width="160" />
 </p>
-
