--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,8 +1,6 @@
 <br />
-<p>
+<div>
   {{ site.signoff }}
   <span class="muted">{{ page.date | date: "at %H:%M" }}</span><br/>
-  <br/>
-  若您对本文有勘误、建议或补充，可以发邮件给我。<br/>
-  <img src="/media/files/misc/contact_me.png" alt="not found" width="160" />
-</p>
+  <a href="/about.html#请我喝杯咖啡">请我喝杯咖啡</a> if 这篇文章对你有帮助
+</div>
