--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,13 +55,13 @@ img {
   color: #8f8f8f; }
 
 .colour-1 {
-  color: #cc9944; }
+  color: #c94; }
 
 .colour-2 {
   color: #925; }
 
 .colour-3 {
-  color: #448844; }
+  color: #484; }
 
 .text-big {
   font-size: 24px;
@@ -248,7 +248,6 @@ section.post {
     margin-left: 20px;
     padding: 0; }
   section.post h1 {
-    text-transform: uppercase;
     text-align: center;
     line-height: 1.5em;
     margin-bottom: 60px; }
@@ -361,10 +360,4 @@ img {
 .paging .right {
   margin-left: 320px; }
 
-table {
-    border-collapse: collapse;
-}
-
-table, td, th {
-    border: 1px solid #d0dfda;
-}
+/*# sourceMappingURL=style.css.map */
