--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,13 +11,9 @@
       {% include pages.html %}
       <div class="content">
         <section class='post'>
-          <h1 class="upcase">
-            <div class='date'>{{ page.date | date_to_string }}</div>
-            {{ page.title }}
-          </h1>
-          <div style="display:none" >
-            <img src="http://7d9j7p.com1.z0.glb.clouddn.com/scribble-min.jpg">
-          </div>
+          <h1>{{ page.title }}</h1>
+          {% include avatar.html %}
+          <div class='date'>Published on {{ page.date | date: "%Y-%m-%d" }}</div>
           {{ content }}
           {% include signoff.html %}
         </section>
