--- a/stylesheets/syntax.css
+++ b/stylesheets/syntax.css
@@ -1,61 +1,78 @@
-.highlight { font-size: 13px; }
-div.highlight, div.highlight code, div.highlight pre  { background: #29281e; }
-div.highlight code { padding: 0; }
-div.highlight .c { color: #75715e } /* Comment */
-div.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-div.highlight .k { color: #66d9ef } /* Keyword */
-div.highlight .l { color: #ae81ff } /* Literal */
-div.highlight .n { color: #f8f8f2 } /* Name */
-div.highlight .o { color: #f92672 } /* Operator */
-div.highlight .p { color: #f8f8f2 } /* Punctuation */
-div.highlight .cm { color: #75715e } /* Comment.Multiline */
-div.highlight .cp { color: #75715e } /* Comment.Preproc */
-div.highlight .c1 { color: #75715e } /* Comment.Single */
-div.highlight .cs { color: #75715e } /* Comment.Special */
-div.highlight .ge { font-style: italic } /* Generic.Emph */
-div.highlight .gs { font-weight: bold } /* Generic.Strong */
-div.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-div.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
-div.highlight .kn { color: #f92672 } /* Keyword.Namespace */
-div.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
-div.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
-div.highlight .kt { color: #66d9ef } /* Keyword.Type */
-div.highlight .ld { color: #e6db74 } /* Literal.Date */
-div.highlight .m { color: #ae81ff } /* Literal.Number */
-div.highlight .s { color: #e6db74 } /* Literal.String */
-div.highlight .na { color: #a6e22e } /* Name.Attribute */
-div.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
-div.highlight .nc { color: #a6e22e } /* Name.Class */
-div.highlight .no { color: #66d9ef } /* Name.Constant */
-div.highlight .nd { color: #a6e22e } /* Name.Decorator */
-div.highlight .ni { color: #f8f8f2 } /* Name.Entity */
-div.highlight .ne { color: #a6e22e } /* Name.Exception */
-div.highlight .nf { color: #a6e22e } /* Name.Function */
-div.highlight .nl { color: #f8f8f2 } /* Name.Label */
-div.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-div.highlight .nx { color: #a6e22e } /* Name.Other */
-div.highlight .py { color: #f8f8f2 } /* Name.Property */
-div.highlight .nt { color: #f92672 } /* Name.Tag */
-div.highlight .nv { color: #f8f8f2 } /* Name.Variable */
-div.highlight .ow { color: #f92672 } /* Operator.Word */
-div.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
-div.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
-div.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
-div.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
-div.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
-div.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
-div.highlight .sc { color: #e6db74 } /* Literal.String.Char */
-div.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-div.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
-div.highlight .se { color: #ae81ff } /* Literal.String.Escape */
-div.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
-div.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
-div.highlight .sx { color: #e6db74 } /* Literal.String.Other */
-div.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-div.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
-div.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
-div.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-div.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
-div.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
-div.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-div.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+.highlight table td { padding: 5px; }
+.highlight table pre { margin: 0; }
+.highlight, .highlight .w {
+  color: #93a1a1;
+  background-color: #002b36;
+}
+.highlight .err {
+  color: #002b36;
+  background-color: #dc322f;
+}
+.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1, .highlight .cs {
+  color: #657b83;
+}
+.highlight .cp {
+  color: #b58900;
+}
+.highlight .nt {
+  color: #b58900;
+}
+.highlight .o, .highlight .ow {
+  color: #93a1a1;
+}
+.highlight .p, .highlight .pi {
+  color: #93a1a1;
+}
+.highlight .gi {
+  color: #859900;
+}
+.highlight .gd {
+  color: #dc322f;
+}
+.highlight .gh {
+  color: #268bd2;
+  background-color: #002b36;
+  font-weight: bold;
+}
+.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
+  color: #6c71c4;
+}
+.highlight .kc {
+  color: #cb4b16;
+}
+.highlight .kt {
+  color: #cb4b16;
+}
+.highlight .kd {
+  color: #cb4b16;
+}
+.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
+  color: #859900;
+}
+.highlight .sr {
+  color: #2aa198;
+}
+.highlight .si {
+  color: #d33682;
+}
+.highlight .se {
+  color: #d33682;
+}
+.highlight .nn {
+  color: #b58900;
+}
+.highlight .nc {
+  color: #b58900;
+}
+.highlight .no {
+  color: #b58900;
+}
+.highlight .na {
+  color: #268bd2;
+}
+.highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
+  color: #859900;
+}
+.highlight .ss {
+  color: #859900;
+}
