CSS table enhancement

--- a/_assets/responsive.scss
+++ b/_assets/responsive.scss
@@ -15,6 +15,13 @@
           > ul, > ol { padding: 0 30px; }
         }
       }
+      table {
+        margin-right: 10px;
+        margin-left: 10px;
+      }
+      .highlighter-rouge {
+        padding: 0 10px;
+      }
     }
   }
 }
