--- a/_includes/buy-me-coffee.html
+++ b/_includes/buy-me-coffee.html
@@ -1,4 +1,4 @@
-<div class="buy-me-coffee">
-	<div>微信扫一扫，请我喝咖啡。</div>
-  <img src="/media/files/2015-12-13-buy-me-coffee-wechat.jpg" alt="buy me coffee" width="100%" />
+<div class="coffee">
+	<p><strong>长按二维码，打赏我个微信红包。</strong></p>
+  <img src="/media/files/2017-06-26-buy-me-coffee-wechat.jpeg" alt="buy me coffee" width="50%" />
 </div>
