--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -2,5 +2,5 @@
 <div>
   {{ site.signoff }}
   <span class="muted">{{ page.date | date: "at %H:%M" }}</span><br/>
-  <a href="{{site.repository_url}}/blob/master/{{page.path}}">Edit this page</a>
+<!--   <a href="{{site.repository_url}}/blob/master/{{page.path}}">Edit this page</a> -->
 </div>
