--- a/_includes/avatar.html
+++ b/_includes/avatar.html
@@ -1,3 +1,3 @@
-<div style="display:none" >
+<!-- <div style="display:none" >
   <img src="http://7d9j7p.com1.z0.glb.clouddn.com/scribble-min.jpg">
-</div>
+</div> -->
