--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,15 +14,16 @@
           <h1>{{ page.title }}</h1>
           {% include avatar.html %}
           {{ content }}
-          {% if page.coffee == 'y' %}
+<!--           {% if page.coffee == 'y' %}
             {% include buy-me-coffee.html %}
-          {% endif %}
+          {% endif %} -->
+          {% include wechat-offical-account.html %}
           {% include signoff.html %}
         </section>
       </div>
-      {% if page.disqus == 'y' %}
+<!--       {% if page.disqus == 'y' %}
         {% include disqus.html %}
-      {% endif %}
+      {% endif %} -->
     </div>
     {% include footer.html %}
   </body>
