remove previous/next page

--- a/_includes/pages.html
+++ b/_includes/pages.html
@@ -1,4 +1,4 @@
-<section class="paging">
+<!-- <section class="paging">
   {% if page.previous %}
     <div class="left">
       <a href="{{ page.previous.url }}">
@@ -13,4 +13,4 @@
       </a>
     </div>
   {% endif %}
-</section>
+</section> -->
