--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,12 +13,13 @@
         <section class='post'>
           <h1>{{ page.title }}</h1>
           {% include avatar.html %}
+          {% include timestamps.html %}
           {{ content }}
 <!--           {% if page.coffee == 'y' %}
             {% include buy-me-coffee.html %}
           {% endif %} -->
           {% include wechat-offical-account.html %}
-          {% include signoff.html %}
+          <!-- {% include signoff.html %} -->
         </section>
       </div>
 <!--       {% if page.disqus == 'y' %}
